fix header align

--- a/templates/static/css/tailwind.css
+++ b/templates/static/css/tailwind.css
@@ -646,6 +646,10 @@ video {
   flex-direction: row;
 }
 
+.items-center {
+  align-items: center;
+}
+
 .justify-between {
   justify-content: space-between;
 }
@@ -731,6 +735,11 @@ video {
 
 .text-center {
   text-align: center;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-sm {
